--- a/HTML & CSS/INF103B_de_Ridder_Bryan/subpages/tickets.html
+++ b/HTML & CSS/INF103B_de_Ridder_Bryan/subpages/tickets.html
@@ -16,13 +16,26 @@
     <!-- Navigation menu: -->
     <nav>
         <ul>
-            <li><a class="hoverable" href="../index.html">Home</a></li>
-            <li><a class="hoverable" href="./lineup.html">Line-up</a></li>
-            <li><a class="active" href="./tickets.html">Tickets</a></li>
-            <li><a class="hoverable" href="./practicalinfo.html">Practical information</a></li>
-            <li><a class="hoverable" href="./photos.html">Photos</a></li>
-            <li class="navlogo"><a class="alogo" href="../index.html"><img src="../images/icons/logo_magenta_xs.png"
-                                                                           alt="logo"></a></li>
+            <li class="firstitem"><a class="active" href="../index.html">Home</a></li>
+            <li><a class="hoverable" href="../subpages/lineup.html">Line-up &#9662;</a>
+                <!-- Dropdown menu: -->
+                <ul>
+                    <li><a class="hoverable" href="../subpages/lineup.html#wednesday">Wednesday 13th</a></li>
+                    <li><a class="hoverable" href="../subpages/lineup.html#thursday">Thursday 14th</a></li>
+                    <li><a class="hoverable" href="../subpages/lineup.html#friday">Friday 15th</a></li>
+                </ul>
+            </li>
+            <li><a class="hoverable" href="../subpages/tickets.html">Tickets &#9662;</a>
+                <!-- Dropdown menu: -->
+                <ul>
+                    <li><a class="hoverable" href="../subpages/tickets.html">Ticket information</a></li>
+                    <li><a class="hoverable" href="../subpages/tickets.html#buytickets">Buy tickets</a></li>
+                </ul>
+            </li>
+            <li><a class="hoverable" href="../subpages/practicalinfo.html">Practical information</a></li>
+            <li><a class="hoverable" href="../subpages/fotos.html">Photos</a></li>
+            <li class="navlogo"><a class="alogo" href="../index.html">
+                <img src="../images/icons/logo_magenta_xs.png" alt="logo"></a></li>
         </ul>
     </nav>
 
@@ -41,11 +54,23 @@
 
 </header>
 
-<form action="" method="post">
+<form action="" method="post" id="buytickets">
     <ul>
-        <li><label for="review">Geef hier je review:</label></li>
-        <li><textarea id="review" name="review"></textarea></li>
-        <li><input type="submit" value="Verzend"></li>
+        <li><label for=“naam”>Naam: </label>
+            <input required type="text" id=“naam” name=“naam” maxlength=“50” size=“40"></li>
+        <li><label for=“familienaam”>Familienaam: </label>
+            <input required type="text" id=“familienaam” name=“familienaam” maxlength=“50” size=“40"></li>
+        <li><label for=“geboortedatum”>Geboortedatum: </label>
+            <input required type="text" id=“geboortedatum” name=“geboortedatum” maxlength=“50” size=“40"></li>
+        <li><label for=“woonplaats”>Woonplaats: </label>
+            <input required type="text" id=“woonplaats” name=“woonplaats” maxlength=“50” size=“40"></li>
+        <li><label for=“adres”>Adres: </label>
+            <input required type="text" id=“adres” name=“adres” maxlength=“50” size=“40"></li>
+        <li><label for=“aantaltickets”>Aantal tickets: </label>
+            <input required type="text" id=“aantaltickets” name=“aantaltickets” maxlength=“50” size=“40"></li>
+        <li><label for="opmerking">Opmerkingen :</label></li>
+        <li><textarea id="opmerking" name="opmerking"></textarea></li>
+        <li><input class="button1" type="submit" value="Submit" name="submit"></li>
     </ul>
 </form>
 
